Fix failing `make` in Debian build environment
Fix failing `make` in Debian build environment, due to an old version of
`check` library being present in the Apt-get package management and
failing to find require C Real-Time library, with the "Fix" being to
install from source, which requires the current `before_script` in the
Gitlab config script now.

```
$ make test
gcc -c -o src/robot.o src/robot.c -g -Wall
gcc -c -o src/robot_test.o src/robot_test.c -g -Wall
gcc  -I/usr/local/lib/include/ -o bin/test src/robot.o src/robot_test.o src/test_helpers.c src/robot_test_helpers.c -lm -lcheck && \
./bin/test
/usr/lib/gcc/x86_64-linux-gnu/6/../../../x86_64-linux-gnu/libcheck.a(check.o): In function `check_get_clockid':
(.text+0xab3): undefined reference to `timer_create'
/usr/lib/gcc/x86_64-linux-gnu/6/../../../x86_64-linux-gnu/libcheck.a(check.o): In function `check_get_clockid':
(.text+0xad5): undefined reference to `timer_delete'
/usr/lib/gcc/x86_64-linux-gnu/6/../../../x86_64-linux-gnu/libcheck.a(check_pack.o): In function `ppack':
(.text+0x526): undefined reference to `__pthread_register_cancel'
/usr/lib/gcc/x86_64-linux-gnu/6/../../../x86_64-linux-gnu/libcheck.a(check_pack.o): In function `ppack':
(.text+0x570): undefined reference to `__pthread_unregister_cancel'
/usr/lib/gcc/x86_64-linux-gnu/6/../../../x86_64-linux-gnu/libcheck.a(check_run.o): In function `srunner_run':
(.text+0xa92): undefined reference to `timer_create'
/usr/lib/gcc/x86_64-linux-gnu/6/../../../x86_64-linux-gnu/libcheck.a(check_run.o): In function `srunner_run':
(.text+0xae0): undefined reference to `timer_settime'
/usr/lib/gcc/x86_64-linux-gnu/6/../../../x86_64-linux-gnu/libcheck.a(check_run.o): In function `srunner_run':
(.text+0xb0a): undefined reference to `timer_delete'
/usr/lib/gcc/x86_64-linux-gnu/6/../../../x86_64-linux-gnu/libcheck.a(check_log.o): In function `subunit_lfun':
(.text+0x5f4): undefined reference to `subunit_test_start'
/usr/lib/gcc/x86_64-linux-gnu/6/../../../x86_64-linux-g

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,15 @@
 image: buildpack-deps:latest
 
 before_script:
-  - apt-get update -y
-  - apt-get install -y check
+  - mkdir /tmp/check
+  - cd /tmp/check
+  - curl -L https://github.com/libcheck/check/releases/download/0.12.0/check-0.12.0.tar.gz | tar xvz
+  - cd check-0.12.0
+  - ./configure
+  - make
+  - make check
+  - make install
+  - ldconfig # Refresh linker sources
 
 stages:
   - build
