Update docker image to a custom one with Check lib
Update the Docker image used within the Gitlab CI runner configuration
file to use a custom built one that includes the require Check library
pre-installed.

== References:
- [Check \| Installing Check]
  (https://libcheck.github.io/check/web/install.html)

- [libcheck/check: A unit testing framework for C]
  (https://github.com/libcheck/check)

- [library/buildpack\-deps \- Docker Hub]
  (https://hub.docker.com/_/buildpack-deps/)

- [\| Docker Documentation]
  (https://docs.docker.com/engine/reference/builder/#workdir)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,4 @@
-image: buildpack-deps:latest
-
-before_script:
-  - mkdir /tmp/check
-  - cd /tmp/check
-  - curl -L https://github.com/libcheck/check/releases/download/0.12.0/check-0.12.0.tar.gz | tar xvz
-  - cd check-0.12.0
-  - ./configure
-  - make
-  - make check
-  - make install
-  - ldconfig # Refresh linker sources
+image: sonna/check:latest
 
 stages:
   - build
