Fix missing `checkout` git code in CircleCI config
Fix the missing checkout step within the CircleCI configuration file,
since it was not immediately apparent that was not going to happen with
a Git project, then add the `run:` prefix to run shell commands or
scripts directly.

== References:
- [2\.0 Docs \- CircleCI]
  (https://circleci.com/docs/2.0/#running-your-first-circleci-build)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,13 +4,15 @@ jobs:
     docker:
     - image: sonna/check:latest
     steps:
-    - make
+    - checkout
+    - run: make
 
   test:
     docker:
     - image: sonna/check:latest
     steps:
-    - make test
+    - checkout
+    - run: make test
 
 workflows:
   version: 2
