Update Travis CI config to better use Docker
Update the Travis Continuous Integration (CI) configuration file to
actually use Docker container, beyond just pulling the Docker image and
maybe running in daemon mode, hidden from view.

== References:
- [How to Automate Web Application Testing With Docker and Travis \|
  Linux\.com \| The source for Linux information]
  (https://www.linux.com/learn/how-automate-web-application-testing-docker-and-travis)

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,12 @@ services:
 
 before_install:
 - docker pull sonna/check
+- docker run -d --name app sonna/check
+- docker ps -a
 
 script:
-- make
-- make test
+- docker exec app bash -c "make"
+- docker exec app bash -c "make test"
+
+after_script:
+- docker rm -f app
