Fix non-running container issue in Travis CI
Resolve the following error message:
```
The command "docker exec app bash -c "make"" exited with 1.
0.02s$ docker exec app bash -c "make test"
Error response from daemon: Container
ebd4a71028e1d6315054d2e929cd4b6353fb90c86963e95d2b43a69fbf4b4a98 is not
running
```

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,7 @@ services:
 
 before_install:
 - docker pull sonna/check
-- docker run -d --name app sonna/check
-- docker ps -a
 
 script:
-- docker exec app bash -c "make"
-- docker exec app bash -c "make test"
-
-after_script:
-- docker rm -f app
+- docker run --rm sonna/check bash -c "make"
+- docker run --rm sonna/check bash -c "make test"
