Fix missing mounted directory within Travis Docker
Fix the missing mounting of the local work directory into a Docker
container within Travis CI, apparently it is very "do it yourself" when
using Docker compare to its initial build configuration systems and its
competition.

== Notes:
- Add missing `test.o` removal during `make testclean`, in order to
  rebuild the entire project from scratch (if need be)

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ before_install:
 - docker pull sonna/check
 
 script:
-- docker run --rm sonna/check bash -c "make"
-- docker run --rm sonna/check bash -c "make test"
+- docker run --rm -v $(pwd):/app -w /app sonna/check bash -c "make distclean; make"
+- docker run --rm -v $(pwd):/app -w /app sonna/check bash -c "make testclean; make test"
